--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -8,7 +8,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.2.0
+  version: 0.2.1
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
@@ -165,7 +165,7 @@ components:
         - ROAMING_ON
         - ROAMING_OFF
     CountryCode:
-      description: The country code as an identifier for the country and the dependent areas.
+      description: The country calling code as an identifier for the country and the dependent areas.
       type: string
       example: "49"
     CountryName:
