--- a/code/API_definitions/check-device-connectivity.yaml
+++ b/code/API_definitions/check-device-connectivity.yaml
@@ -194,7 +194,7 @@ components:
       description: The Mobile country code (MCC) as an geographic region identifier for the country and the dependent areas.
       type: integer
     CountryName:
-      description: The ISO 3166 ALPHA-2 country-codes of mapped to mobile country code(MCC). If we have one MCC maps to multiple countries  then we have list of countries.If there is not mapping of MCC to any country then we have ["xx"]
+      description: The ISO 3166 ALPHA-2 country-codes of mapped to mobile country code(MCC). If there is mapping of one MCC to multiple countries, then we have list of countries. If there is no mapping of MCC to any country, then ["xx"] will be used.
       type: array
       items:
         type: string
