--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -40,15 +40,8 @@ jobs:
       - name: Install Spectral functions
         run: npm install -g @stoplight/spectral-functions@latest
       - name: Run Spectral linting
-        run: spectral lint code/API_definitions/*.yaml --verbose --ruleset .spectral.yml > spectral.log 2>&1
-
-        # Save Spectral and MegaLinter logs
-      - name: Save Logs
-        if: ${{ success() }} || ${{ failure() }}
-        run: |
-          mkdir -p megalinter-reports
-          cp spectral.log megalinter-reports/spectral.log    
-
+        run: spectral lint code/API_definitions/*.yaml --verbose --ruleset .spectral.yml   
+   
       # MegaLinter
       - name: MegaLinter
         id: ml
