--- a/.github/workflows/megalinter.yml
+++ b/.github/workflows/megalinter.yml
@@ -57,6 +57,7 @@ jobs:
           DISABLE: COPYPASTE,MARKDOWN
           DISABLE_LINTERS: SPELL_CSPELL,SPELL_LYCHEE,YAML_PRETTIER,REPOSITORY_GRYPE, REPOSITORY_SEMGREP,REPOSITORY_DEVSKIM,REPOSITORY_KICS,REPOSITORY_TRIVY,REPOSITORY_TRIVY_SBOM,REPOSITORY_TRUFFLEHOG,REPOSITORY_CHECKOV,REPOSITORY_GITLEAKS,YAML_V8R,JAVA_PMD,JAVA_CHECKSTYLE
           YAML_YAMLLINT_CONFIG_FILE: ".yamllint.yaml"
+          OPENAPI_SPECTRAL_CONFIG_FILE: ".spectral.yml"
           YAML_YAMLLINT_FILTER_REGEX_INCLUDE: "(code/)"
 
           # Upload MegaLinter artifacts
